tests/doc_examples/invalid/01-variable-declaration.md_example_1/main.w
// This file was auto generated from an example found in: 01-variable-declaration.md_example_1
// Example metadata: {"valid":false}
let x = 12;
x = 77; // error: Variable is not reassignable
